--- a/index.html
+++ b/index.html
@@ -11,67 +11,48 @@
 <body>
 
 <div>
-	<!-- <nev class="nev"> Home </nev>
-	<nev class="nev"> Contact </nev>
-	<nev class="nev"> About </nev> -->
 
-	<a href="" target="_blank" class="nav">Home</a>&nsbp
-	<a href="" target="_blank" class="nav">Contact</a>&nsbp
-	<a href="" target="_blank" class="nav">About</a>&nsbp
+	<a href="" class="right">Home</a>
+	<a href="contact.html" target="_blank" class="rightt" >Contact</a>
+	<a href="About.html" target="_blank" class="rightt">About</a>
 
 
 
-<h1 class="h1 ">  Hi </mark></h1>
+<h1 class="h1">  Hi </mark></h1>
 <h2 class="h1 ">  I'm Jisan </mark> </h2>
 <h3 id="pro"> I'm a Professional Full Stack Web Developer </mark> </h3>
+
+</div>
 
 
 <img src="images/jisan3.jpg" alt="jisan3" class="img1" > 
 <img src="images/jisan2.jpg" alt="jisan2" class="img1" >
 <img src="images/jisan4.jpg" alt="jisan4" class="img1" >
 
-<p class="h2 font">I'm Jisan.I'm a student.Im studding BSC in CSE at Southeast University.I have completed my HSC from Kishoreganj Walinewaz Khan College.Kishoreganj is my Hometown.
+<p class="font">I'm Jisan.I'm a student.Im studding BSC in CSE at Southeast University.I have completed my HSC from Kishoreganj Walinewaz Khan College.Kishoreganj is my Hometown.
 
 This is my demo portfolio website.I wanna be a pro web developer.I'm learning full stack web development from Sikhbe Shobai Banani branch.Our mentor is "Minhaz Faisal". </p>
 
-<p class="h2 font">I'm also a graphic designer.I've completed my graphic designing course from BCE (Bangladesh Computer Education).I worked there as an newbe designer.But for some personal problems, I left the job.Now i'm working on fiverr as a graphic designer. </p>
+<p class="font">I'm also a graphic designer.I've completed my graphic designing course from BCE (Bangladesh Computer Education).I worked there as an newbe designer.But for some personal problems, I left the job.Now i'm working on fiverr as a graphic designer. </p>
 
 
+<h2 align="center"> ** <mark> My Skills </mark>** </h2>
+
+<label class="prog"><mark> <var>Adobe Photoshop</var></mark></label>
+<progress value="80" max="100">80%</progress>
+
+<label style="margin-left: 20px;"> <mark> <var>Adobe Illustrator</var></mark></label>
+<progress  value="60" max="100">60% </progress> <br><br>
+
+<label class="prog" > <mark><var>HTML 5</var></mark></label>
+<progress value="60" max="100">60%</progress> 
+
+<label style="margin-left: 78px;"><mark><var> CSS 3 </var></mark></label>
+<progress value="30" max="100">30%</progress>
 
 
-<fieldset> 
+   
 
-	<legend><mark> My skills </mark></legend>
- <!--<h2 class="h1"> <mark> My skills </mark></h2> -->
-
- <ul class="h2">
- 	<h3 class="h2"> <mark> <u> Web </u></mark> </h3>
- 	<li>HTML 5</li>
- 	<li>CSS</li>
- 	<li>Bootstrap</li>
- 	<li>Java Script</li>
- </ul> 
-
-<ul class="h2">
-   <h3 class="h2"> <mark> <u> Graphics</u> </mark> </h3>
- 	<li>Business Card Design</li>
- 	<li>Photo Editing</li>
- 	<li>Logo Design</li>
- 	<li>UI Design</li>
- </ul>
-</fieldset>
-
-<fieldset >
-<legend> <mark> My Social Media Links</mark></legend>	
-
-<a href="https://www.facebook.com/hossainjisan001/" target="_blank" class="blue">Facebook</a><br>
-<a href="https://www.linkedin.com/in/hossainjisan/" target="_blank" class="blue">Linkedin</a><br>
-<a href="https://twitter.com/HossainJisan2" target="_blank" class="blue">Twitter</a><br>
-</fieldset>
-
-
-
-</div>
 
 </body>
 
